minor changes to prevent row height collapse

--- a/assets/CSS/scrollstyle.css
+++ b/assets/CSS/scrollstyle.css
@@ -146,6 +146,12 @@ section {
     cursor: pointer;
 }
 
+.image1 {
+    position: relative;
+    margin: 0 auto;
+    opacity: 0;
+}
+
 
 .image2 {
     position: absolute;
